--- a/Simple-Chat-Room_Student/ChatServer/ChatServer.vcxproj.filters
+++ b/Simple-Chat-Room_Student/ChatServer/ChatServer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\Server\ChatServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\Connection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Server\IPEndpoint.h">
